@@ -1,9 +1,18 @@
 <?php 
-
-/*
-	404
-	Creates the iFeature 404 page.
-	Copyright (C) 2011 CyberChimps
+/**
+* 404 page template used by the iFeature theme.
+*
+* Authors: Tyler Cunningham, Trent Lapinski.
+* Copyright: © 2011
+* {@link http://cyberchimps.com/ CyberChimps LLC}
+*
+* Released under the terms of the GNU General Public License.
+* You should have received a copy of the GNU General Public License,
+* along with this software. In the main directory, see: license.txt.
+* If not, see: {@link http://www.gnu.org/licenses/}.
+*
+* @package iFeature
+* @since 3.1
 */
 
 /* Header call. */
