@@ -1,12 +1,19 @@
 <?php
-
-/*
-	Comments
-	Creates the core comments section.
-	Copyright (C) 2011 CyberChimps
-	Version 2.0
+/**
+* Comments template used by the iFeature theme.
+*
+* Author: Tyler Cunningham
+* Copyright: © 2011
+* {@link http://cyberchimps.com/ CyberChimps LLC}
+*
+* Released under the terms of the GNU General Public License.
+* You should have received a copy of the GNU General Public License,
+* along with this software. In the main directory, see: license.txt.
+* If not, see: {@link http://www.gnu.org/licenses/}.
+*
+* @package iFeature
+* @since 3.1
 */
-
 ?>
 
 <!-- Begin @Core chimps_before_comments hook content-->
