@@ -1,11 +1,18 @@
 <?php
-
-/*
-	Functions
-	Author: Tyler Cunningham
-	Establishes the core theme functions.
-	Copyright (C) 2011 CyberChimps
-	Version 3.0
+/**
+* Functions file used by the iFeature theme.
+*
+* Author: Tyler Cunningham
+* Copyright: © 2011
+* {@link http://cyberchimps.com/ CyberChimps LLC}
+*
+* Released under the terms of the GNU General Public License.
+* You should have received a copy of the GNU General Public License,
+* along with this software. In the main directory, see: license.txt.
+* If not, see: {@link http://www.gnu.org/licenses/}.
+*
+* @package iFeature
+* @since 3.1
 */
 
 /**
