@@ -1,13 +1,19 @@
 <?php 
-
-/*
-	Search
-	
-	Establishes the iFeature search functionality. 
-	
-	Copyright (C) 2011 CyberChimps
+/**
+* Search template used by the iFeature theme.
+*
+* Authors: Tyler Cunningham, Trent Lapinski.
+* Copyright: © 2011
+* {@link http://cyberchimps.com/ CyberChimps LLC}
+*
+* Released under the terms of the GNU General Public License.
+* You should have received a copy of the GNU General Public License,
+* along with this software. In the main directory, see: license.txt.
+* If not, see: {@link http://www.gnu.org/licenses/}.
+*
+* @package iFeature
+* @since 3.1
 */
-
 get_header(); 
 
 ?>
@@ -30,8 +36,8 @@ get_header();
 	</div>
 	
 	<div id="sidebar" class="grid_4">
-				<?php get_sidebar(); ?>
-		</div>
+		<?php get_sidebar(); ?>
+	</div>
 	
 </div><!--end content_wrap-->
 <div class="clear"></div>
